2020-12-10  1.04  (Phil M Perry)

  Makefile.PL removed, Build.PL, META.yml, MANIFEST, README.md
   Revert to use of Build.PL.

2020-12-09  1.03  (Phil M Perry)

  Makefile.PL, Build.PL, MANIFEST
   Change build process to use Makefile.PL instead of Build.PL

  t/02-javascript.t
   Fix failing t-tests due to use of long-double or quadmath libraries (more
    precision than the t-test was providing). There are still many failures
    of this test on every Solaris box, but at the moment I have no way to
    try to debug on that platform (I will be looking for volunteers to help
    out with this).

  lib/Text/KnuthPlass.xs
   Fix failing Windows t-tests where libraries already contained an _unlink
    module (rename to _unlinkKP).

  Build.PL, README.md, MANIFEST
   Change authorship statement, write a much more complete README 
    (with markdown).

  t/00-load.t, t/02-javascript.t, t/pod-coverage.t, t/pod.t, 
    lib/Text/KnuthPlass.pm
   Fix Perl Critic complaints. Currently ignoring "multiple package 
    declarations" in KnuthPlass.pm, might in the future split up the file.
    Move pod and pod-coverage to "author testing only".

  tools/1_pc.pl, tools/2_t-tests.pl, tools/3_examples.pl, MANIFEST,
    examples/KP.pl
   Add some tools for testing and illustrating usage.

2011-03-17  Simon Cozens <simon@simon-cozens.org>

  * lib/Text/KnuthPlass.pm: 1.02 release removes unnecessary dependencies.

  * t/02-javascript.t: Remove dependency on JSON::Syck

  * t/01-nodes.t: De-5.10.0-ify.

  * lib/Text/KnuthPlass.pm: Oop.

  * Changes: This is 1.01.

  * t/04-regression.t: Compare against Perl.

  * lib/Text/KnuthPlass.pm, lib/Text/KnuthPlass.xs: Another refactoring to
  speed up.

2011-03-16  Simon Cozens <simon@simon-cozens.org>

  * lib/Text/KnuthPlass.pm: Make debugging output debugging-only.

  * META.yml: This should be autogenerated, not under VC.

  * Makefile.PL: We're using Build.

  * t/03-center.t: Blah
