@@ -33,3 +33,7 @@ provides:
   Text::KnuthPlass::Penalty:
     file: lib/Text/KnuthPlass.pm
 version: 1.04
+resources:
+  bugtracker: https://github.com/PhilterPaper/Text-KnuthPlass/issues
+  homepage: https://www.catskilltech.com
+
